version 0.99.5 (not yet released)
           * add support for plotting on unstructured grids using
             keyword 'tri' in pcolor,contour,contourf methods (which
             then forward to tripcolor, tricontour, tricontourf axes
             methods).
	   * let continents that fill the whole map be filled.
           * added option for cubic spline interpolation in interp function
             (order=3) using scipy.ndimage.
           * added "near-sided perspective" projection for a satellite
           view at an arbitrary altitude.
           * patch from Stephane Raynaud to pass format string to
             drawmapscale, and allow units='m'.
           * updated proj4 source to version 4.7.0, pyproj to 1.8.6.
	   * add "is_land" method to check whether a point is over land or
             water.
	   * geos-3.1.1 now required. 3.2.0 source included (instead of 2.2.3).
           * shiftgrid no longer requires a cyclic point to be present
             (patch from Eric Bruning).
           * fix date2index bugs.
           * update date2index function with a bug-fix from netcdf4-python.
           * in contourf method, mask data outside map projection region
             (this prevents contourf from erroneously filling entire map).
           * added 'nightshade' method to shade night regions on a map.
             'daynight.py' example added to illustrate usage.
           * added lonmin, lonmax instance variables.
version 0.99.4 (svn revision 7332)
           * ax.frame replaced with ax.spines to maintain compatibility 
             with matplotlib spines support.
           * added latmax kwarg to drawparallels and drawmeridians 
             (patch from Chris Murphy).
           * added new example "plotmap_shaded.py" (shaded relief plot).
           * added new example "plothighsandlows.py".
           * add fix_aspect kwarg to Basemap.__init__, when False
             axes.set_aspect is set to 'auto' instead of default 'equal'.