@@ -53,6 +53,7 @@ include examples/geos_demo_2.py
 include examples/geos_demo_3.py
 include examples/200706041200-msg-ch01-SAfrica.jpg
 include examples/fcstmaps.py
+include examples/fcstmaps_axesgrid.py
 include examples/plotsst.py
 include examples/wiki_example.py
 include examples/fillstates.py
